petite podif html

--- a/HTML/PageConnexion.html
+++ b/HTML/PageConnexion.html
@@ -9,17 +9,7 @@
     <title>Page Connexion</title>
     <!-- icone de la page (onglet) -->
     <link rel="i=shorcut icon" href="RoiNoir.png">
-
-    
 </head>
-
-<!-- <script>
-    function controle(){
-    var saisie =document.getElementById("input").value;
-    alert("Vous avez saisi : "+ saisie);
-    }
-</script>
-<td><input type = "button" id="bouton" onclick="controle()"> </td> -->
 
 <body>
     <section>
@@ -32,11 +22,11 @@
                 <table>
                     <tr>
                         <td><label>Identifiant : </label></td>
-                        <td><input type="text" id="identifiant" placeholder="Entrez votre identifiant"></td>
+                        <td><input type="text" id="identifiant" placeholder="Entrez votre identifiant"/></td>
                     </tr>
                     <tr>
                         <td><label>Mot de passe : </label></td>
-                        <td><input type="password" id="mdp" placeholder="Entrez votre mdp"></td>
+                        <td><input type="password" id="mdp" placeholder="Entrez votre mdp"/></td>
                     </tr>
                 </table>
             </div>
@@ -44,6 +34,10 @@
                 <p>
                     <input type="button" name="connexion" type="submit" id="co" value="Se connecter"/>
                     <a href="PageInscription.html" target="_self"><button>S'inscrire</button></a>
+                    <!-- <input type="button" name="mdpOublie" type="submit" id="mdpOublie" value="Mot de passe oublié"/> -->
+                </p>
+                <p >
+                    <a href="PageInscription.html" target="_self" style="color:white;">Mot de passe oublié</a>
                 </p>
             </div> 
         </fieldset>
