--- a/HTML/PageConnexion.html
+++ b/HTML/PageConnexion.html
@@ -32,7 +32,7 @@
             </div>
             <div id="validation" style="text-align:center">
                 <p>
-                    <input type="button" name="connexion" type="submit" id="co" value="Se connecter"/>
+                    <a href="PageAccueil.html" target="_self"><button>Se connecter</button></a>
                     <a href="PageInscription.html" target="_self"><button>S'inscrire</button></a>
                     <!-- <input type="button" name="mdpOublie" type="submit" id="mdpOublie" value="Mot de passe oublié"/> -->
                 </p>
