--- a/HTML/PageAccueil.html
+++ b/HTML/PageAccueil.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Form_echec.css" />
     <title>Accueil</title>
+    <link rel="i=shorcut icon" href="RoiNoir.png">
 </head>
 <body>
     <div class="conteneur">
-        <div class="gauche">
+        <div class="gauche"></div>
+        <div class="milieu" style=  "text-align:center">
             <p>
                 <h2>
                     Nom du joueur
@@ -27,7 +29,13 @@
                 </select>
             </p>
         </div>
-        <div class="droite">test</div>
+        <div class="droite">
+            <div class = grille3verti>
+                <div>Votre elo est de : </div>
+                <div>Historique des 5 dernieres parties</div>
+                <div> <a href="PageHistoriqueParties.html" target="_self"><button>Aller à l'historique</button></a></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
