--- a/HTML/PageJeu.html
+++ b/HTML/PageJeu.html
@@ -20,12 +20,12 @@
                         <div>Chrono adversaire</div>
                     </div>
                     <div>Pieces capturées</div>
-                    <div class="grillePlateauPrincipale">
-                        <div class="grillePlateau1a8"></div>
+                    <div class="grille">
+                        <div class="grille1"></div>
                         
-                        <div class="grillePlateau"></div>
+                        <div class="plateau"></div>
                         <div></div>
-                        <div class="grillePlateauAaH"></div>
+                        <div class="grille2"></div>
                     </div>
                     <div class="grille2horiz">
                         <div>Mon nom</div>
