--- a/HTML/PageInscription.html
+++ b/HTML/PageInscription.html
@@ -54,7 +54,7 @@
                 </table>
             </div>
             <div id="validation" style="text-align:center">
-                <p><input type="button" name="connexion" type="submit" id="co" value="Se connecter"/></p>
+                <a href="PageAccueil.html" target="_self"><button>Se connecter</button></a>
             </div>  
         </fieldset>
     </section>
