--- a/HTML/PageAccueil.html
+++ b/HTML/PageAccueil.html
@@ -9,14 +9,15 @@
 </head>
 <body>
     <div class="conteneur">
-        <div class="gauche">
+        <div class ="gauche"></div>
+        <div class="milieu" style="text-align: center;">
             <p>
                 <h2>
                     Nom du joueur
                 </h2>
             </p>
             <p>
-                <label for="choix-partie">Quelle partie ?</label>
+                <label for="choix-partie">Quelle partie voulez-vous jouer ?</label>
             </p>
             <p>
                 <select name="partie" id="choix-partie">
@@ -26,8 +27,17 @@
                     <option value = "Pb">Résoudre un Problème </option>
                 </select>
             </p>
+            <p>
+                <a href="PageJeu.html" target="_self"><button>Jouer !</button></a>
+            </p>
         </div>
-        <div class="droite">test</div>
+        <div class="droite">
+            <div>
+                <div>Elo</div>
+                <div>Historique dernieres parties</div>
+                <div><a href="PageJeu.html" target="_self"><button>Jouer !</button></a></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
