--- a/HTML/PageAccueil.html
+++ b/HTML/PageAccueil.html
@@ -10,7 +10,7 @@
 <body>
     <div class="conteneur">
         <div class ="gauche"></div>
-        <div class="milieu" style="text-align: center;">
+        <div class="milieu" style="text-align: center; border: solid 1px black;">
             <p>
                 <h2>
                     Nom du joueur
@@ -31,7 +31,7 @@
                 <a href="PageJeu.html" target="_self"><button>Jouer !</button></a>
             </p>
         </div>
-        <div class="droite">
+        <div class="droite" style="text-align: center; border: solid 1px black;">
             <div>
                 <div>Elo</div>
                 <div>Historique dernieres parties</div>
