--- a/HTML/PageJeu.html
+++ b/HTML/PageJeu.html
@@ -16,34 +16,34 @@
             <div class="grilleCentralePlateauEtBoutons">
                 <div class="grilleCentral5Verti">
                     <div class="grilleCentraleNomChrono">
-                        <div style="text-align: left;">Nom adversaire</div>
-                        <div style="text-align: right;">Chrono adversaire</div>
+                        <div style="text-align: left;border: solid 1px black;">Nom adversaire</div>
+                        <div style="text-align: right;border: solid 1px black;">Chrono adversaire</div>
                     </div>
-                    <div>Pieces capturées</div>
-                    <div class="grillePlateau">
-                        <div class="grillePlateau1a8"></div>
+                    <div style="border: solid 1px black;">Pieces capturées</div>
+                    <div class="flexPlateau">
+                        <div class="grillePlateau">
+                            <div class="grillePlateau1a8"></div>
                         
-                        <div class="grillePlateauPrincipal"></div>
-                        <div></div>
-                        <div class="grillePlateauAaH"></div>
+                            <div class="grillePlateauPrincipal"></div>
+                            <div></div>
+                            <div class="flexPlateauAaH"></div>
+                        </div>
                     </div>
                     <div class="grilleCentraleNomChrono">
-                        <div style="text-align: left;">Mon nom</div>
-                        <div style="text-align: right;">Mon chrono</div>
+                        <div style="text-align: left;border: solid 1px black;">Mon nom</div>
+                        <div style="text-align: right;border: solid 1px black;">Mon chrono</div>
                     </div>
-                    <div>Pieces capturées</div>
+                    <div style="border: solid 1px black;">Pieces capturées</div>
                 </div>
-                <div class="grilleAbandonnerNul">
-                    <div></div>
-                    <div style="text-align: center;"><button>Abandonner</button></div>
-                    <div style="text-align: center;"><button>Nul</button></div>
-                    <div></div>
+                <div class="flexAbandonnerNul">
+                    <button style="margin:5px">Abandonner</button>
+                    <button style="margin:5px">Nul</button>
                 </div>
             </div>
         </div>
         <div class="droite">
-            <div style="height: 50%;">Historique Coups</div>
-            <div style="height: 50%;">Chat</div>
+            <div class="divHistoriqueEtChat">Historique Coups</div>
+            <div class="divHistoriqueEtChat">Chat</div>
         </div>
     </div>
 
@@ -69,7 +69,7 @@
         for (let i = 0 ; i<8 ; i++){
             const c = document.createElement('div');
             c.innerHTML = lettres[i];
-            document.querySelector('.grillePlateauAaH').append(c);
+            document.querySelector('.flexPlateauAaH').append(c);
         }
     </script>
 
