--- a/HTML/PageJeu.html
+++ b/HTML/PageJeu.html
@@ -19,7 +19,7 @@
                         <div style="text-align: left;border: solid 1px black;">Nom adversaire</div>
                         <div style="text-align: right;border: solid 1px black;">Chrono adversaire</div>
                     </div>
-                    <div style="border: solid 1px black;">Pieces capturées</div>
+                    <div class="piecesCapturees">Pieces capturées</div>
                     <div class="flexPlateau">
                         <div class="grillePlateau">
                             <div class="grillePlateau1a8"></div>
@@ -33,7 +33,7 @@
                         <div style="text-align: left;border: solid 1px black;">Mon nom</div>
                         <div style="text-align: right;border: solid 1px black;">Mon chrono</div>
                     </div>
-                    <div style="border: solid 1px black;">Pieces capturées</div>
+                    <div class="piecesCapturees">Pieces capturées</div>
                 </div>
                 <div class="flexAbandonnerNul">
                     <button style="margin:5px">Abandonner</button>
