--- a/HTML/PageAccueil.html
+++ b/HTML/PageAccueil.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Form_echec.css" />
+    <link rel="stylesheet" href="assets/css/accueil.css" />
     <title>Accueil</title>
     <link rel="i=shorcut icon" href="RoiNoir.png">
 </head>
 <body>
-    <div class="conteneur">
 
         <div class ="gauche"></div>
         <div class="milieu" style="text-align: center; border: solid 1px black;">
@@ -40,6 +39,5 @@
                 <div><a href="PageHistoriqueParties.html" target="_self"><button>Aller à l'historique</button></a></div>
             </div>
         </div>
-    </div>
 </body>
 </html>
