--- a/HTML/PageConnexion.html
+++ b/HTML/PageConnexion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Form_echec.css" />
+    <link rel="stylesheet" href="assets/css/connexionInscription.css" />
     <!-- Titre de la page -->
     <title>Page Connexion</title>
     <!-- icone de la page (onglet) -->
@@ -22,11 +22,11 @@
                 <table>
                     <tr>
                         <td><label>Identifiant : </label></td>
-                        <td><input type="text" id="identifiant" placeholder="Entrez votre identifiant"/></td>
+                        <td><input type="text" name="identifiant" placeholder="Entrez votre identifiant"/></td>
                     </tr>
                     <tr>
                         <td><label>Mot de passe : </label></td>
-                        <td><input type="password" id="mdp" placeholder="Entrez votre mdp"/></td>
+                        <td><input type="password" name="mdp" placeholder="Entrez votre mdp"/></td>
                     </tr>
                 </table>
             </div>
