--- a/HTML/PageInscription.html
+++ b/HTML/PageInscription.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Form_echec.css" />
+    <link rel="stylesheet" href="assets/css/connexionInscription.css" />
     <!-- Titre de la page -->
     <title>Page Inscription</title>
     <!-- icone de la page (onglet) -->
@@ -45,7 +45,7 @@
                     </tr>
                     <tr>
                         <td><label>Email : </label></td>
-                        <td><input type="text" id="email" placeholder="Entrez votre email"></td>
+                        <td><input type="email" id="email" placeholder="Entrez votre email"></td>
                     </tr>
                     <tr>
                         <td><label>Etes vous coach ? </label></td>
@@ -53,9 +53,9 @@
                     </tr>
                 </table>
             </div>
-            <div id="validation" style="text-align:center">
+            <div style="text-align:center">
                 <a href="PageAccueil.html" target="_self"><button>Se connecter</button></a>
-            </div>  
+            </div>
         </fieldset>
     </section>
 </body>
