Historique + chrono HTML

--- a/HTML/PageHistoriqueParties.html
+++ b/HTML/PageHistoriqueParties.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/historique.css" />
+    <script type="module" defer src="assets/js/historique.js"></script>
     <title>Historique</title>
     <link rel="i=shorcut icon" href="RoiNoir.png">
 </head>
+
 <body>
-    BONJOUR ! 
+    <div class="gauche">
+        <p>d</p>
+        <p>d</p>
+    </div>
+
+    <div class="milieu">
+        <div>
+
+           <h1>Utilisateur</h1> 
+            <p>Elo : </p>
+        </div>
+
+
+    <table >
+        <thead>
+            <tr>
+                <td>Utilisateur</td>
+                <td>Adversaire</td>
+                <td>Type de partie</td>
+                <td>Resultat</td>
+                <td>Date</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+
+            </tr>
+        </tbody>
+    </table>
+</div>
+    
 </body>
+
 </html>
