--- a/HTML/PageJeu.html
+++ b/HTML/PageJeu.html
@@ -13,38 +13,36 @@
 
 <body>
     <div class="gauche">Il n'y a rien à gauche de la page</div>
-    <div class="milieu">
-        <div class="grilleCentralePlateauEtBoutons">
-            <div class="grilleCentral5Verti">
-                <div class="grilleCentraleNomChrono">
-                    <div style="text-align: left;border: solid 1px black;">Nom adversaire</div>
-                    <div style="text-align: right;border: solid 1px black;">Chrono adversaire</div>
-                </div>
-                <div class="piecesCapturees">Pieces capturées</div>
-                <div class="flexPlateau">
-                    <div class="grillePlateau">
-                        <div class="grillePlateau1a8"></div>
 
-                        <div class="grillePlateauPrincipal"></div>
-                        <div></div>
-                        <div class="flexPlateauAaH"></div>
-                    </div>
-                </div>
-                <div class="grilleCentraleNomChrono">
-                    <div style="text-align: left;border: solid 1px black;">Mon nom</div>
-                    <div style="text-align: right;border: solid 1px black;">Mon chrono</div>
-                </div>
-                <div class="piecesCapturees">Pieces capturées</div>
+    <div class="grilleCentralePlateauEtBoutons">
+        <div class="grilleCentral5Verti">
+            <div class="grilleCentraleNomChrono">
+                <div style="text-align: left;border: solid 1px black;">Nom adversaire</div>
+                <div style="text-align: right;border: solid 1px black;">Chrono adversaire</div>
             </div>
-            <div class="flexAbandonnerNul">
-                <button style="margin:5px">Abandonner</button>
-                <button style="margin:5px">Nul</button>
+            <div class="piecesCapturees">Pieces capturées</div>
+            <div class="grillePlateau">
+                    <div class="grillePlateau1a8"></div>
+                    <div class="grillePlateauPrincipal"></div>
+                    <div></div>
+                    <div class="grillePlateauAaH"></div>
             </div>
+            <div class="grilleCentraleNomChrono">
+                <div style="text-align: left;border: solid 1px black;">Mon nom</div>
+                <div style="text-align: right;border: solid 1px black;">Mon chrono</div>
+            </div>
+            <div class="piecesCapturees">Pieces capturées</div>
+        </div>
+        <div class="flexAbandonnerNul">
+            <button style="margin:5px">Abandonner</button>
+            <button style="margin:5px">Nul</button>
         </div>
     </div>
+
     <div class="droite">
         <div class="divHistoriqueEtChat">Historique Coups</div>
         <div class="divHistoriqueEtChat">Chat</div>
     </div>
 </body>
+
 </html>
