--- a/HTML/PageJeu.html
+++ b/HTML/PageJeu.html
@@ -18,7 +18,7 @@
         <div class="grilleCentral5Verti">
             <div class="grilleCentraleNomChrono">
                 <div style="text-align: left;border: solid 1px black;">Nom adversaire</div>
-                <div style="text-align: right;border: solid 1px black;">Chrono adversaire</div>
+                <div id="h2" style="text-align: right;border: solid 1px black;">05:00</div>
             </div>
             <div class="piecesCapturees">Pieces capturées</div>
             <div class="grillePlateau">
@@ -29,7 +29,7 @@
             </div>
             <div class="grilleCentraleNomChrono">
                 <div style="text-align: left;border: solid 1px black;">Mon nom</div>
-                <div style="text-align: right;border: solid 1px black;">Mon chrono</div>
+                <div id="h1" style="text-align: right;border: solid 1px black;">05:00</div>
             </div>
             <div class="piecesCapturees">Pieces capturées</div>
         </div>
