--- a/HTML/PageJeu.html
+++ b/HTML/PageJeu.html
@@ -17,8 +17,8 @@
     <div class="grilleCentralePlateauEtBoutons">
         <div class="grilleCentral5Verti">
             <div class="grilleCentraleNomChrono">
-                <div style="text-align: left;border: solid 1px black;">Nom adversaire</div>
-                <div id="h2" style="text-align: right;border: solid 1px black;">05:00</div>
+                <div>Nom adversaire</div>
+                <div id="h2"></div>
             </div>
             <div class="piecesCapturees">Pieces capturées</div>
             <div class="grillePlateau">
@@ -28,14 +28,16 @@
                     <div class="grillePlateauAaH"></div>
             </div>
             <div class="grilleCentraleNomChrono">
-                <div style="text-align: left;border: solid 1px black;">Mon nom</div>
-                <div id="h1" style="text-align: right;border: solid 1px black;">05:00</div>
+                <div>Mon nom</div>
+                <div id="h1"></div>
             </div>
             <div class="piecesCapturees">Pieces capturées</div>
         </div>
         <div class="flexAbandonnerNul">
-            <button style="margin:5px">Abandonner</button>
-            <button style="margin:5px">Nul</button>
+            <button>Abandonner</button>
+            <button>Nul</button>
+            <button name="reculer">-</button>
+            <button name="avancer">+</button>
         </div>
     </div>
 
