modif menu accueil

--- a/HTML/PageAccueil.html
+++ b/HTML/PageAccueil.html
@@ -35,7 +35,21 @@
 				</li>
 				
 				<li>
-					<a href="PageJeu.html">Jeu</a>
+					<a href="PageJeu.html">Jeu en cours</a>
+				</li>
+				
+				<li>
+					<a href="PageProbleme.html">Probleme</a>
+				</li>
+				<li>
+					<a href="PageJeu.html">Profil</a>
+				</li>
+
+				<li>
+					<a href="PageStats.html">Mes statistiques</a>
+				</li>
+				<li>
+					<a href="PageAccueil.html">Deconnexion</a>
 				</li>
 			</ul>
 		
