--- a/HTML/PageHistoriqueParties.html
+++ b/HTML/PageHistoriqueParties.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/testcharte.css" />
     <link rel="stylesheet" href="assets/css/historique.css" />
     <script type="module" defer src="assets/js/historique.js"></script>
     <title>Historique</title>
@@ -12,37 +13,70 @@
 </head>
 
 <body>
+    <header>
+        <h1>Projet echec</h1>
+        <p>Une image stylée</p>
+    </header>
+
+    <!-- le menu -->
     <div class="gauche">
-        <p>d</p>
-        <p>d</p>
+
+        <nav>
+
+            <ul>
+                <li class="active">
+                    <a href="PageAccueil.html">Accueil</a>
+                </li>
+
+                <li>
+                    <a href="PageConnexion.html">Connexion</a>
+                </li>
+
+                <li>
+                    <a href="PageInscription.html">Inscription</a>
+                </li>
+
+                <li>
+                    <a href="PageHistoriqueParties.html">Historique</a>
+                </li>
+
+                <li>
+                    <a href="PageJeu.html">Jeu</a>
+                </li>
+            </ul>
+
+        </nav>
+
     </div>
 
     <div class="milieu">
         <div>
 
-           <h1>Utilisateur</h1> 
+            <h1>Utilisateur</h1>
             <p>Elo : </p>
         </div>
 
 
-    <table >
-        <thead>
-            <tr>
-                <td>Utilisateur</td>
-                <td>Adversaire</td>
-                <td>Type de partie</td>
-                <td>Resultat</td>
-                <td>Date</td>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
+        <table>
+            <thead>
+                <tr>
+                    <td>Utilisateur</td>
+                    <td>Adversaire</td>
+                    <td>Type de partie</td>
+                    <td>Resultat</td>
+                    <td>Date</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
 
-            </tr>
-        </tbody>
-    </table>
-</div>
-    
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <footer>
+        contact @projetechec
+    </footer>
 </body>
 
 </html>
