--- a/HTML/PageJeu.html
+++ b/HTML/PageJeu.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/testcharte.css" />
     <link rel="stylesheet" href="assets/css/jeu.css" />
     <script type="module" defer src="assets/js/jeu.js"></script>
     <title>Echec</title>
@@ -12,9 +13,15 @@
 </head>
 
 <body>
-    <div class="gauche">Il n'y a rien à gauche de la page</div>
+    <header>
+        pouet
+    </header>
 
-    <div class="grilleCentralePlateauEtBoutons">
+    <div class="gauche">
+        Il n'y a rien à gauche de la page
+    </div>
+
+    <div class="milieu">
         <div class="grilleCentral5Verti">
             <div class="grilleCentraleNomChrono">
                 <div>Nom adversaire</div>
@@ -22,10 +29,10 @@
             </div>
             <div class="piecesCapturees">Pieces capturées</div>
             <div class="grillePlateau">
-                    <div class="grillePlateau1a8"></div>
-                    <div class="grillePlateauPrincipal"></div>
-                    <div></div>
-                    <div class="grillePlateauAaH"></div>
+                <div class="grille8 grillePlateau1a8"></div>
+                <div class="grillePlateauPrincipal"></div>
+                <div></div>
+                <div class="grille8 grillePlateauAaH"></div>
             </div>
             <div class="grilleCentraleNomChrono">
                 <div>Mon nom</div>
@@ -62,10 +69,12 @@
         </div>
         <div class="divHistoriqueEtChat chat">
             <div class="titre">CHAT</div>
-            <div class ="listeMessages">Listes des messages</div>
+            <div class="listeMessages">Listes des messages</div>
             <input type="text" placeholder="Mon message">
         </div>
     </div>
+
+    <footer>footer</footer>
 </body>
 
 </html>
