--- a/HTML/PageJeu.html
+++ b/HTML/PageJeu.html
@@ -18,7 +18,45 @@
     </header>
 
     <div class="gauche">
-        Il n'y a rien à gauche de la page
+        <nav>
+
+			<ul>
+				<li class="active">
+					<a href="PageAccueil.html">Accueil</a>
+				</li>
+
+				<li>
+					<a href="PageConnexion.html">Connexion</a>
+				</li>
+
+				<li>
+					<a href="PageInscription.html">Inscription</a>
+				</li>
+
+				<li>
+					<a href="PageHistoriqueParties.html">Historique</a>
+				</li>
+
+				<li>
+					<a href="PageJeu.html">Jeu en cours</a>
+				</li>
+				
+				<li>
+					<a href="PageProbleme.html">Probleme</a>
+				</li>
+				<li>
+					<a href="PageJeu.html">Profil</a>
+				</li>
+
+				<li>
+					<a href="PageStats.html">Mes statistiques</a>
+				</li>
+				<li>
+					<a href="PageAccueil.html">Deconnexion</a>
+				</li>
+			</ul>
+
+		</nav>
     </div>
 
     <div class="milieu">
