--- a/HTML/PageAccueil.html
+++ b/HTML/PageAccueil.html
@@ -48,7 +48,7 @@
 					<a href="PageProbleme.html">Probleme</a>
 				</li>
 				<li>
-					<a href="PageJeu.html">Profil</a>
+					<a href="PageProfil.html">Profil</a>
 				</li>
 
 				<li>
