charte graphique bouton

--- a/HTML/PageAccueil.html
+++ b/HTML/PageAccueil.html
@@ -162,9 +162,9 @@
 							<tr>
 								<td colspan = "2" style="text-align: center ;">
 									<p>Liste des problèmes
-									<button>
-										<a href="PageProbleme.html">Go !</a>
-
+									<button class="petitBouton">
+										<a href="PageProbleme.html"></a>
+										Go !
 									</button>
 								</p>
 								</td>
@@ -174,9 +174,9 @@
 
 					</form>
 
-					<button class="close-parametres">Annuler</button>
+					<button class="close-parametres petitBouton">Annuler</button>
 
-					<a href="PageJeu.html" target="_self"><button>Jouer !</button></a>
+					<a href="PageJeu.html" target="_self"><button  class="petitBouton">Jouer !</button></a>
 
 				</div>
 			</div>
@@ -206,7 +206,7 @@
 			</tbody>
 		</table>
 
-		<div><a href="PageHistoriqueParties.html" target="_self"><button>Aller à l'historique</button></a></div>
+		<div><a href="PageHistoriqueParties.html" target="_self"><button class="grosBouton">Aller à l'historique</button></a></div>
 
 	</div>
 
