--- a/HTML/PageProbleme.html
+++ b/HTML/PageProbleme.html
@@ -105,7 +105,7 @@
 			</div>
 			
 			<div class="affichage-content">
-				<table class="tableau-problemes">
+				<table class="tableau-problemes tab-standard">
 					<thead>
 						<tr>
 							<th class="num-pb">Numéro du problème</th>
