--- a/HTML/PageJeu.html
+++ b/HTML/PageJeu.html
@@ -107,7 +107,7 @@
         </div>
         <div class="divHistoriqueEtChat chat">
             <div class="titre">CHAT</div>
-            <div class="listeMessages">Listes des messages</div>
+            <div class="listeMessages"></div>
             <input type="text" placeholder="Mon message">
         </div>
     </div>
