modif menu accueil + profil

--- a/HTML/PageAccueil.html
+++ b/HTML/PageAccueil.html
@@ -25,15 +25,7 @@
 
 			<ul>
 				<li class="active">
-					<a href="PageAccueil.html">Accueil</a>
-				</li>
-
-				<li>
-					<a href="PageConnexion.html">Connexion</a>
-				</li>
-
-				<li>
-					<a href="PageInscription.html">Inscription</a>
+					<a href="PageAccueil.html">Projet Echecs</a>
 				</li>
 
 				<li>
@@ -55,7 +47,7 @@
 					<a href="PageStats.html">Mes statistiques</a>
 				</li>
 				<li>
-					<a href="PageAccueil.html">Deconnexion</a>
+					<a href="PageConnexion.html">Deconnexion</a>
 				</li>
 			</ul>
 
