--- a/HTML/PageHistoriqueParties.html
+++ b/HTML/PageHistoriqueParties.html
@@ -22,28 +22,36 @@
     <div class="gauche">
 
         <nav>
-            <ul>
-                <li>
-                    <a href="PageAccueil.html">Accueil</a>
-                </li>
 
-                <li>
-                    <a href="PageConnexion.html">Connexion</a>
-                </li>
+			<ul>
+				<li>
+					<a href="PageAccueil.html">Projet Echecs</a>
+				</li>
 
-                <li>
-                    <a href="PageInscription.html">Inscription</a>
-                </li>
+				<li class="active">
+					<a href="PageHistoriqueParties.html">Historique</a>
+				</li>
 
-                <li class="active">
-                    <a href="PageHistoriqueParties.html">Historique</a>
-                </li>
+				<li>
+					<a href="PageJeu.html">Jeu en cours</a>
+				</li>
+				
+				<li>
+					<a href="PageProbleme.html">Probleme</a>
+				</li>
+				<li>
+					<a href="PageProfil.html">Profil</a>
+				</li>
 
-                <li>
-                    <a href="PageJeu.html">Jeu</a>
-                </li>
-            </ul>
-        </nav>
+				<li>
+					<a href="PageStats.html">Mes statistiques</a>
+				</li>
+				<li>
+					<a href="PageConnexion.html">Deconnexion</a>
+				</li>
+			</ul>
+
+		</nav>
 
     </div>
 
