--- a/HTML/PageProbleme.html
+++ b/HTML/PageProbleme.html
@@ -23,16 +23,8 @@
 		<nav>
 
 			<ul>
-				<li class="active">
-					<a href="PageAccueil.html">Accueil</a>
-				</li>
-
 				<li>
-					<a href="PageConnexion.html">Connexion</a>
-				</li>
-
-				<li>
-					<a href="PageInscription.html">Inscription</a>
+					<a href="PageAccueil.html">Projet Echecs</a>
 				</li>
 
 				<li>
@@ -43,18 +35,18 @@
 					<a href="PageJeu.html">Jeu en cours</a>
 				</li>
 				
-				<li>
+				<li class="active">
 					<a href="PageProbleme.html">Probleme</a>
 				</li>
 				<li>
-					<a href="PageJeu.html">Profil</a>
+					<a href="PageProfil.html">Profil</a>
 				</li>
 
 				<li>
 					<a href="PageStats.html">Mes statistiques</a>
 				</li>
 				<li>
-					<a href="PageAccueil.html">Deconnexion</a>
+					<a href="PageConnexion.html">Deconnexion</a>
 				</li>
 			</ul>
 
