--- a/HTML/PageStats.html
+++ b/HTML/PageStats.html
@@ -13,24 +13,16 @@
 <body>
     <div class ="gauche">
         <nav>
-	
+
 			<ul>
-				<li class="active">
-					<a href="PageAccueil.html">Accueil</a>
+				<li>
+					<a href="PageAccueil.html">Projet Echecs</a>
 				</li>
 
-				<li>
-					<a href="PageConnexion.html">Connexion</a>
-				</li>
-
-				<li>
-					<a href="PageInscription.html">Inscription</a>
-				</li>
-				
 				<li>
 					<a href="PageHistoriqueParties.html">Historique</a>
 				</li>
-				
+
 				<li>
 					<a href="PageJeu.html">Jeu en cours</a>
 				</li>
@@ -38,19 +30,18 @@
 				<li>
 					<a href="PageProbleme.html">Probleme</a>
 				</li>
-
 				<li>
-					<a href="PageJeu.html">Profil</a>
+					<a href="PageProfil.html">Profil</a>
 				</li>
 
-				<li>
+				<li class="active">
 					<a href="PageStats.html">Mes statistiques</a>
 				</li>
 				<li>
-					<a href="PageAccueil.html">Deconnexion</a>
+					<a href="PageConnexion.html">Deconnexion</a>
 				</li>
 			</ul>
-		
+
 		</nav>
 
 
