--- a/HTML/PageJeu.html
+++ b/HTML/PageJeu.html
@@ -22,15 +22,7 @@
 
 			<ul>
 				<li class="active">
-					<a href="PageAccueil.html">Accueil</a>
-				</li>
-
-				<li>
-					<a href="PageConnexion.html">Connexion</a>
-				</li>
-
-				<li>
-					<a href="PageInscription.html">Inscription</a>
+					<a href="PageAccueil.html">Projet Echecs</a>
 				</li>
 
 				<li>
