ajout post dans controllers

--- a/HTML/PageJeu.html
+++ b/HTML/PageJeu.html
@@ -21,7 +21,7 @@
         <nav>
 
 			<ul>
-				<li class="active">
+				<li> 
 					<a href="PageAccueil.html">Projet Echecs</a>
 				</li>
 
@@ -29,7 +29,7 @@
 					<a href="PageHistoriqueParties.html">Historique</a>
 				</li>
 
-				<li>
+				<li class="active">
 					<a href="PageJeu.html">Jeu en cours</a>
 				</li>
 				
@@ -37,7 +37,7 @@
 					<a href="PageProbleme.html">Probleme</a>
 				</li>
 				<li>
-					<a href="PageJeu.html">Profil</a>
+					<a href="PageProfil.html">Profil</a>
 				</li>
 
 				<li>
