--- a/HTML/PageProfil.html
+++ b/HTML/PageProfil.html
@@ -46,6 +46,8 @@
     </div>
     <div class =  "milieu">
         <h1>Mon profil</h1>
+
+        <form method = POST>
         <table class="stats">
             <thead></thead>
                 <tr>
@@ -83,6 +85,6 @@
     <div class = "droite">
 
     </div>
-    
+</form>
 </body>
 </html>
