--- a/HTML/PageStats.html
+++ b/HTML/PageStats.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/testcharte.css" />
     <link rel="stylesheet" href="assets/css/stats.css" />
-	<script defer src="assets/js/accueil.js"></script>
+	<script defer src="assets/js/accueil.js"></script>  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <title>Statistiques</title>
     <link rel="i=shorcut icon" href="RoiNoir.png">
 </head>
@@ -121,7 +122,7 @@
     <div class="droite">
         <div> Evolution du Elo</div>
 
-
     </div>
+    <canvas id = "graphElo" width="100" height="100"></canvas>
 </body>
 </html>
