affichage pieces capturees

--- a/HTML/PageJeu.html
+++ b/HTML/PageJeu.html
@@ -57,7 +57,7 @@
                 <div>Nom adversaire</div>
                 <div id="h2"></div>
             </div>
-            <div class="piecesCapturees">Pieces capturées</div>
+            <div class="piecesCapturees" nom="piecesCaptureesHaut"><p>Pieces capturées</p></div>
             <div class="grillePlateau">
                 <div class="grille8 grillePlateau1a8"></div>
                 <div class="grillePlateauPrincipal"></div>
@@ -68,7 +68,7 @@
                 <div>Mon nom</div>
                 <div id="h1"></div>
             </div>
-            <div class="piecesCapturees">Pieces capturées</div>
+            <div class="piecesCapturees" nom="piecesCaptureesBas"><p>Pieces capturées</p></div>
         </div>
         <div class="flexAbandonnerNul">
             <button>Abandonner</button>
